--- a/python/ansible-core/PKGBUILD
+++ b/python/ansible-core/PKGBUILD
@@ -7,10 +7,10 @@
 # Contributor: atweiden <archbaum@gmail.com>
 
 pkgname=ansible-core
-pkgver=2.12.3
+pkgver=2.12.4
 pkgrel=1
 pkgdesc='Radically simple IT automation platform'
-arch=('any')
+arch=(any)
 url='https://pypi.org/project/ansible-core'
 license=('GPL3')
 depends=('python' 'python-yaml' 'python-paramiko' 'python-jinja' 'python-resolvelib')
@@ -26,7 +26,7 @@ optdepends=('sshpass: for ssh connections with password'
 makedepends=('python-setuptools')
 backup=('etc/ansible/ansible.cfg')
 source=("https://pypi.python.org/packages/source/a/ansible-core/ansible-core-${pkgver}.tar.gz")
-sha512sums=('dedac2546881442f5e904c485bdc464d0ced847520879fd10c2454a2055ada4d051416d450f01ae5a1e2f5073f1633cb4db5265855199bb32c0acb41092d6f05')
+sha512sums=('a196a4f75834b5951330a1ea201aca41581c88a3cedbdd1c9e00acd5d3f06b4fd1948ddb2acea32bc2b758587baf9bd75572d150d6d47a3a957f5d8c4fc06d2f')
 
 build() {
   cd ansible-core-${pkgver}
