--- a/python/pybind11/PKGBUILD
+++ b/python/pybind11/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Matthew Ellison <matt+aur@arroyonetworks.com>
 
 pkgname=pybind11
-pkgver=2.9.1
+pkgver=2.9.2
 pkgrel=1
 pkgdesc='A lightweight header-only library that exposes C++ types in Python and vice versa'
-arch=('any')
+arch=(any)
 url='https://pybind11.readthedocs.org/'
 license=('BSD')
 optdepends=('python: for python bindings')
@@ -15,7 +15,7 @@ makedepends=('cmake' 'boost' 'eigen' 'python' 'python-setuptools' 'python-pytest
              #'python-sphinx' 'python-sphinx_rtd_theme' 'python-breathe')
 checkdepends=('python-numpy' 'python-scipy')
 source=("https://github.com/pybind/pybind11/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('c6160321dc98e6e1184cc791fbeadd2907bb4a0ce0e447f2ea4ff8ab56550913')
+sha256sums=('6bd528c4dbe2276635dc787b6b1f2e5316cf6b49ee3e150264e455a0d68d19c1')
 
 build () {
     cd "${pkgname}-${pkgver}"
