--- a/kde/kamoso/PKGBUILD
+++ b/kde/kamoso/PKGBUILD
@@ -5,21 +5,22 @@
 # Contributor: Panagiotis Papadopoulos <pano_90 AT gmx DOT net>
 
 pkgname=kamoso
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A webcam recorder from KDE community'
 url='https://apps.kde.org/kamoso/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
 groups=(kde-applications kde-multimedia)
 depends=(purpose gst-plugins-good gst-plugins-bad kirigami2)
 makedepends=(extra-cmake-modules kdoctools boost python)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('380c9f0aa53029269f4a8c1e2b46834ac6da5c16eeef6aca4e524e522bde7428'
+sha256sums=('2bde8e8e6de25673a412ba6a966e898959ee5625dcadadc1bc295c12ad7128e1'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
