--- a/kde/kate/PKGBUILD
+++ b/kde/kate/PKGBUILD
@@ -5,17 +5,18 @@
 
 pkgbase=kate
 pkgname=(kwrite kate)
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 makedepends=(extra-cmake-modules kdoctools plasma-framework knewstuff kitemmodels ktexteditor kactivities kuserfeedback)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgbase-$pkgver.tar.xz{,.sig})
-sha256sums=('7e48ccfdb58a41252566b5d6f263db16d6c88af60e2a15aef305bc0fa305a011'
+sha256sums=('afa5141fb2746fc18ea2d97bd80ec37c096589822fe0b0e7ec00c63d0198e0de'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgbase-$pkgver \
