--- a/kde/kcachegrind/PKGBUILD
+++ b/kde/kcachegrind/PKGBUILD
@@ -5,19 +5,20 @@
 
 pkgbase=kcachegrind
 pkgname=(kcachegrind kcachegrind-common qcachegrind)
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Visualization of Performance Profiling Data'
 url='https://apps.kde.org/kcachegrind/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 makedepends=(extra-cmake-modules kdoctools qt5-tools kio)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('325669fe0d33d819207b72e9b77c7c131d24685ee1586aeb54e1ecac6942a547'
+sha256sums=('ddcf3722211d47c90616528607ebc4573835faa52a57e2e9d6763968b9975ab3'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
