--- a/kde/kcron/PKGBUILD
+++ b/kde/kcron/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcron
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Configure and schedule tasks'
 url='https://apps.kde.org/kcron/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-system)
 depends=(kio cron)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('87293e56f90714a99a22656f3cdcd058b6cba3f61457d2973d8d8845eae6bc24'
+sha256sums=('f556c6afbdf4a060dd52db64d36ebc13fcf7dcdaa6a7013b697e866b6338cc39'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
