--- a/gavl/PKGBUILD
+++ b/gavl/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=gavl
 pkgver=1.4.0
 pkgrel=5
 pkgdesc='Low level library, upon which multimedia APIs can be built'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://gmerlin.sourceforge.net/'
 license=('GPL')
 depends=('glibc')
