--- a/rubberband/PKGBUILD
+++ b/rubberband/PKGBUILD
@@ -4,28 +4,33 @@
 # Contributor: Felipe Machado aka arch_audio <machado.felipe@gmail.com>
 
 pkgname=rubberband
-pkgver=1.9.2
+pkgver=2.0.2
 pkgrel=1
 pkgdesc="Time-stretching and pitch-shifting audio library and utility"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.breakfastquay.com/rubberband/"
-license=('GPL2')
-depends=('gcc-libs' 'glibc')
-makedepends=('fftw' 'ladspa' 'meson' 'java-environment' 'libsamplerate'
-'libsndfile' 'vamp-plugin-sdk')
+license=(GPL2)
+depends=(gcc-libs glibc)
+makedepends=(fftw java-environment ladspa meson libsamplerate libsndfile
+vamp-plugin-sdk)
 optdepends=(
   'ladspa-host: for LADSPA plugin'
   'vamp-host: for VAMP plugin'
   'vamp-plugin-sdk: for VAMP plugin'
 )
-provides=('librubberband.so' 'librubberband-jni.so')
+provides=(librubberband.so librubberband-jni.so)
 source=("$pkgname-$pkgver.tar.gz::https://github.com/breakfastquay/rubberband/archive/v$pkgver.tar.gz")
-sha512sums=('1c43f20d23776dfc7ba936b8477a285c55c0cea350c120f71b7f231d6a9574dcb25c3078f278a38c8d5beb0f6b322e2f8d4cd5f6c72d57cecdb49a63cd5b06b9')
-b2sums=('1b20314f9b363f9a81c6008e05ee91d4e442f3f22db8676f5d624371ad26ba049dccefd7c26a1f2f353802841e067137bc3c72cf3b15d37fc0f807b1e95b8d08')
+sha512sums=('56e33f3a6f5755242e46f9cb224e372bea7a367756f08d3322c8951a40b3907f1a2957775de6f2584a093e6adf82ca91015119650d5a624afe39086a47843ddc')
+b2sums=('b0175fe71fa5070b6268b4242815e43c8f588bedf77639db3d7f766b358d948394a1fd54e9e32f63f75431077ea826a2b58593dc11a3f5081e51f3f579354f82')
 
 build() {
   local java_major=$(java --version 2>/dev/null |grep 'openjdk'| cut -d ' ' -f2| cut -d '.' -f1)
   export JAVA_HOME="/usr/lib/jvm/java-${java_major}-openjdk"
+
+  case "${CARCH}" in
+    powerpc) export CXXFLAGS+=' -latomic' ;;
+  esac
+
   cd "$pkgname-$pkgver"
   arch-meson -Dfft=fftw \
             -Dresampler=libsamplerate \
@@ -35,10 +40,10 @@ build() {
 }
 
 package() {
-  depends+=('libfftw3.so' 'libsamplerate.so' 'libsndfile.so')
+  depends+=(libfftw3.so libsamplerate.so libsndfile.so)
+
   cd "$pkgname-$pkgver"
   DESTDIR="${pkgdir}" meson install -C build
   # docs
-  install -vDm 644 {CHANGELOG,README.md} \
-    -t "${pkgdir}/usr/share/doc/${pkgname}/"
+  install -vDm 644 {CHANGELOG,README.md} -t "${pkgdir}/usr/share/doc/${pkgname}/"
 }
