--- a/imagemagick/PKGBUILD
+++ b/imagemagick/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=imagemagick
 pkgname=(imagemagick imagemagick-doc)
-pkgver=7.1.0.23
+pkgver=7.1.0.29
 pkgrel=1
 pkgdesc='An image viewing/manipulation program'
 url='https://www.imagemagick.org/'
@@ -17,10 +17,11 @@ _relname=ImageMagick-${pkgver%%.*}
 _tarname=ImageMagick-${pkgver%.*}-${pkgver##*.}
 source=(https://download.imagemagick.org/ImageMagick/download/releases/$_tarname.tar.xz{,.asc}
         arch-fonts.diff)
-sha256sums=('7a0d8b4bab482fb52dd585d30060b7a6ab2427fd305b6aa545b5c2f62431ff6b'
+sha256sums=('a89df63da5ec823ae77049d747bf6b370bc867a06659b410f42652e5773fc62c'
             'SKIP'
             'a85b744c61b1b563743ecb7c7adad999d7ed9a8af816650e3ab9321b2b102e73')
 validpgpkeys=(D8272EF51DA223E4D05B466989AB63D48277377A)  # Lexie Parsimoniae
+options=(debug)
 
 shopt -s extglob
 
@@ -93,7 +94,7 @@ package_imagemagick() {
               'djvulibre: DJVU support'
               'pango: Text rendering'
               'imagemagick-doc: manual and API docs')
-  options=(!emptydirs libtool)
+  options+=(!emptydirs libtool)
   backup=(etc/$_relname/{colors,delegates,log,mime,policy,quantization-table,thresholds,type,type-{dejavu,ghostscript}}.xml)
   conflicts=(imagemagick6)
   provides=(libmagick)
