--- a/mlt/PKGBUILD
+++ b/mlt/PKGBUILD
@@ -8,10 +8,10 @@
 # Contributor: Gustavo Alvarez <sl1pkn07@gmail.com>
 
 pkgname=mlt
-pkgver=7.0.1
+pkgver=7.6.0
 pkgrel=1
 pkgdesc='An open source multimedia framework'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.mltframework.org'
 license=(GPL)
 depends=(libebur128)
@@ -36,7 +36,7 @@ optdepends=('sdl_image: SDL1 plugin'
 makedepends=(cmake ladspa frei0r-plugins libdv sdl_image libsamplerate sox ffmpeg vid.stab qt5-svg
              jack libexif python swig movit eigen opencv rubberband gdk-pixbuf2 pango rtaudio imagemagick)
 source=(https://github.com/mltframework/mlt/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('b68c88d9ad91889838186188cce938feee8b63e3755a3b6fb45dc9c2ae0c5ecd')
+sha256sums=('49f3c7902432a5a873ebce8406d901ac73623ff3dba7265b6e8b55cfe8220201')
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
