--- a/kde/ktnef/PKGBUILD
+++ b/kde/ktnef/PKGBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=ktnef
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='API for handling TNEF data'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
 license=(LGPL)
 depends=(kcalutils kcontacts)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7ac7bdf6e7261ae09b621f1f563f746baf288d291c285c1cda97c200bb3d1447'
+sha256sums=('d496cc88668646b9b4c13a07de26e1e82bd5dec973737001717d52856c48c9c6'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
