--- a/kde/kdepim-addons/PKGBUILD
+++ b/kde/kdepim-addons/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kdepim-addons
-pkgver=21.12.1
-pkgrel=1
+pkgver=21.12.3
+pkgrel=2
 pkgdesc='Addons for KDE PIM applications'
 arch=(x86_64 powerpc64le)
 url='https://kontact.kde.org'
@@ -13,11 +13,12 @@ makedepends=(extra-cmake-modules kdoctools boost kaddressbook)
 optdepends=('grammalecte: French grammar plugin')
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('18d2d16bc23fcdd5e92a3bec5907eaae3698b2c94996714d8649cda778014ecf'
+sha256sums=('d0909026abf6aabbbf6720cb91120e2df955db2f5c50117e019db1243e4067df'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
