--- a/kde/kdesdk-kioslaves/PKGBUILD
+++ b/kde/kdesdk-kioslaves/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=21.12.3
 pkgrel=1
 pkgdesc='KDE SDK KIO-Slaves'
 url='https://www.kde.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kdesdk)
 depends=(kio perl)
