--- a/kde/kfloppy/PKGBUILD
+++ b/kde/kfloppy/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kfloppy
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Floppy Formatter'
 url='https://apps.kde.org/kfloppy/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 depends=(kxmlgui kcompletion hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(kde-applications kde-utilities)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('973bd610602b44640acaad40df0a4e591a5a772dcbda6b2cee345799e687bf6f'
+sha256sums=('a89aaea94fcca85f37b99b5107b0ab31a94c8885143a9d25a37c2ed3fa8b13de'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
