--- a/kde/khangman/PKGBUILD
+++ b/kde/khangman/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=khangman
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Hangman Game'
 url='https://apps.kde.org/khangman/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-education)
 depends=(libkeduvocdocument knewstuff)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('34c82c7884efc2746d19b8fd9ff5d19c5bdbaee323b0852b0b11cb6262724c85'
+sha256sums=('66af3d7d9c5c5b4fa0003399523acc356b9d33b735276404741c927b43b01b00'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
