--- a/kde/khelpcenter/PKGBUILD
+++ b/kde/khelpcenter/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=khelpcenter
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Application to show KDE Applications documentation'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/help/'
 license=(LGPL)
 groups=(kde-applications kde-system)
 depends=(khtml kdoctools xapian-core grantlee perl)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('14257aa6be8ad1c329f6b4fa0ecb446f440af6e9cc90df65ec675a7255298559'
+sha256sums=('193b2caf6a24bbb5f9f0d4e992cb58844258dd7691ac967a4e0068bc4e6141ba'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
