--- a/kde/kig/PKGBUILD
+++ b/kde/kig/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kig
-pkgver=21.12.1
-pkgrel=1
+pkgver=21.12.3
+pkgrel=2
 pkgdesc='Interactive Geometry'
 url='https://apps.kde.org/kig/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-education)
-depends=(ktexteditor qt5-xmlpatterns boost-libs hicolor-icon-theme)
+depends=(ktexteditor qt5-xmlpatterns boost-libs python hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools boost)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('9a62ac2fe00c4ac99f5d0018e6ffa46db1f54c78f2de62fbb280b9472fed8508'
+sha256sums=('b6a9ec8981c6983df2295ad0a8a53732928a8bb40c6c92305030392d5bf88066'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
