--- a/kde/kimagemapeditor/PKGBUILD
+++ b/kde/kimagemapeditor/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kimagemapeditor
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 arch=(x86_64 powerpc64le)
 pkgdesc='HTML Image Map Editor'
@@ -15,11 +15,12 @@ groups=(kde-applications kde-graphics)
 depends=(qt5-webengine kparts)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a9783f560fe013aa5fe388feb64f96d65189e79e835cd8226d3338ed341eede5'
+sha256sums=('792f7b23a00d0a989a7f15747aceeee61824c8e461f473cf38e34ae068f6b561'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
