--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -4,9 +4,10 @@
 
 pkgname=('llvm' 'llvm-libs' 'llvm-ocaml')
 pkgver=13.0.1
-pkgrel=2
+pkgrel=2.1
 _ocaml_ver=4.13.1
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 makedepends=('cmake' 'ninja' 'libffi' 'libedit' 'ncurses' 'libxml2'
@@ -22,7 +23,8 @@ source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
         don-t-move-DBG_VALUE-instructions.patch
         llvm-config.h
         build-any.patch
-        riscv-generic.patch)
+        riscv-generic.patch
+        backport-riscv-insn-directive.patch::https://github.com/llvm/llvm-project/commit/283879793dc787225992496587581ec77b6b0610.patch)
 sha256sums=('ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
             'SKIP'
             'a7e902a7612d0fdabe436a917468b043cc296bc89d8954bfc3126f737beb9ac4'
@@ -31,7 +33,8 @@ sha256sums=('ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
             'f7d69f84241416398fdb3df8bb44f9fae3c49d89889c7ffa3b37aa2e9d78f708'
             '597dc5968c695bbdbb0eac9e8eb5117fcd2773bc91edf5ec103ecffffab8bc48'
             'fa49cb1e9107d8d151a419d3c09f231f9fa42b8ea77a87de0392b44a7ea0076e'
-            '5c53e41a4011e7c65c43ed3871c09b544df9f73e35d09914d4463b2f9103b84e')
+            '5c53e41a4011e7c65c43ed3871c09b544df9f73e35d09914d4463b2f9103b84e'
+            '03917e6e558a2de500aa59478e66aaff317d338c2282345d1d4d85fda4e3bf4d')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
@@ -55,6 +58,9 @@ prepare() {
 
   patch -Np1 -i ${srcdir}/build-any.patch
   patch -Np1 -i ${srcdir}/riscv-generic.patch
+
+  # Related: https://github.com/rust-lang/stdarch/issues/1291
+  patch -Np2 -i ../backport-riscv-insn-directive.patch
 }
 
 build() {
