--- a/kde/kmag/PKGBUILD
+++ b/kde/kmag/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kmag
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='Screen Magnifier'
 url='https://apps.kde.org/kmag/'
 license=(GPL FDL)
@@ -14,11 +14,12 @@ groups=(kde-applications kde-accessibility)
 depends=(kio libqaccessibilityclient hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('10e18eb26b7c19cbf91d036570ceba95cc1a3a413b678f9a4df1c68187afbfec'
+sha256sums=('548f9b4c13eda644c0fb182eb78f6326c57f6cb7dc8a185fcb09dd585f31fd18'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
