--- a/kde/mbox-importer/PKGBUILD
+++ b/kde/mbox-importer/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=mbox-importer
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Import mbox files to KMail'
 arch=(x86_64 powerpc64le)
@@ -13,11 +13,12 @@ depends=(mailcommon)
 makedepends=(extra-cmake-modules boost)
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('321cedd6a5d9a317c9fd9f09c2eba288aacc8a1fe7fc431b231258a951bb2078'
+sha256sums=('56393516c953c1a135f57cd64ea5f7d30c866e3e41487a188b730fb1bf077005'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
