--- a/kde/pim-data-exporter/PKGBUILD
+++ b/kde/pim-data-exporter/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=pim-data-exporter
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Import and export KDE PIM settings'
 arch=(x86_64 powerpc64le)
@@ -13,11 +13,12 @@ depends=(calendarsupport mailcommon kuserfeedback)
 makedepends=(extra-cmake-modules kdoctools boost)
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('698cd14a7d4b3401226ad78944c6b7cfa75448a94d3c22631af649e29a45e4d0'
+sha256sums=('b8e0cfaec06eeb26af7d08d3b0932fa3721ec8b83761e84a604fea4fd6d29c61'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
