--- a/kde/kmouth/PKGBUILD
+++ b/kde/kmouth/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kmouth
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='Speech Synthesizer Frontend'
 url='https://apps.kde.org/kmouth/'
 license=(GPL FDL)
@@ -14,11 +14,12 @@ groups=(kde-applications kde-accessibility)
 depends=(kio hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('5e23b327b4b21f64177178adb2a29ddfffea07db345a47234c91b9ed5b7c6dd6'
+sha256sums=('352e2dbde7a18fbea68a615dd12ba7f55aa4eaf49957a7db7feb6b51afb87377'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
