--- a/kde/kmplot/PKGBUILD
+++ b/kde/kmplot/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kmplot
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Mathematical Function Plotter'
 url='https://apps.kde.org/kmplot/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-education)
 depends=(kparts hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('250f325c60fe6011bb2a044c89f8ce9562b0ba96cb1c403012774c1471d7c3b6'
+sha256sums=('7821580142922a93f7cd5653226cd513ba0287df4f289aaedfaf2bdf98fbb9ee'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
