--- a/kde/libksane/PKGBUILD
+++ b/kde/libksane/PKGBUILD
@@ -4,20 +4,21 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libksane
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='An image scanning library'
 url='https://www.kde.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 depends=(ktextwidgets kwallet sane)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('9ddbff9aaecb74a84cf740b4031ecfc20693d1a0fceb21ce8d331bd325018cca'
+sha256sums=('ef8b823a11de933023061641627ab94b802d745ce5310c97469840ed09122232'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
