--- a/kde/kompare/PKGBUILD
+++ b/kde/kompare/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kompare
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Graphical file differences tool'
 url='https://apps.kde.org/kompare/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kdesdk)
 depends=(libkomparediff2 ktexteditor hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e1aa0c11b09371ca8d211e1af0fdc7725bae1eadce6d6ad4b6b692beb585a77d'
+sha256sums=('9008fb78e238dc34233b5eb063bc0b54553dfa70b22d4164b39adef82b57ea24'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
