--- a/bzrtp/PKGBUILD
+++ b/bzrtp/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=bzrtp
-pkgver=5.0.68
+pkgver=5.1.10
 pkgrel=1
 pkgdesc='Open source implementation of ZRTP keys exchange protocol'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -11,13 +11,12 @@ license=(GPL2)
 depends=(libxml2 bctoolbox sqlite)
 makedepends=(bcunit cmake)
 source=(https://gitlab.linphone.org/BC/public/$pkgname/-/archive/$pkgver/$pkgname-$pkgver.tar.bz2)
-sha256sums=('ac3d3e36f4b57b852a59e96e7e2d1feec3f37abf61f3bc62f4e3b741a4b90f14')
+sha256sums=('b5405ec7ef66b89728c9ca99615582cfe0aa55dea70c1657b867179881754559')
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DENABLE_STATIC=OFF \
-    -DENABLE_STRICT=OFF
+    -DENABLE_STATIC=OFF
   cmake --build build
 }
 
