--- a/kde/kopete/PKGBUILD
+++ b/kde/kopete/PKGBUILD
@@ -4,11 +4,11 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kopete
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Instant Messenger'
 url='https://apps.kde.org/kopete/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-network)
 depends=(knotifyconfig kcmutils ktexteditor kcontacts kidentitymanagement libkleo qca-qt5 kdelibs4support khtml
@@ -17,7 +17,7 @@ makedepends=(extra-cmake-modules mediastreamer libgadu jsoncpp kdoctools kdesign
 optdepends=('mediastreamer: jingle support' 'libgadu: Gadu-Gadu protocol' 'kdnssd: bonjour protocol')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig} 
         kopete-mediastreamer2.14.patch kopete-srtp2.patch kopete-openssl-1.1.patch kopete-mediastreamer-4.3.patch)
-sha256sums=('67c32e67e20c49a5c11148c736e4dfd3b4dd4c7ab0cbde86baab18acfa306c8d'
+sha256sums=('b3c44e0c96d22c638adcaf8e9b982ee520c2d02c458ec8bab98a7e2ab84ea1ec'
             'SKIP'
             '8b8e7a5d9f17fafdddb402fab22b0b8d9963039ea8ea9fa749cad67aeeb879ac'
             'ceed663f7007654d186d918cf7a0742972ed5bd319879021e9ba80e395177700'
@@ -26,6 +26,7 @@ sha256sums=('67c32e67e20c49a5c11148c736e4dfd3b4dd4c7ab0cbde86baab18acfa306c8d'
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 prepare() {
 # fix build with mediastreamer 2.14 https://phabricator.kde.org/D15956
