--- a/kde/korganizer/PKGBUILD
+++ b/kde/korganizer/PKGBUILD
@@ -3,10 +3,10 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=korganizer
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Calendar and scheduling Program'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/korganizer/'
 license=(GPL2)
 depends=(kdepim-runtime kontactinterface incidenceeditor kuserfeedback phonon-qt5)
@@ -14,11 +14,12 @@ makedepends=(extra-cmake-modules kdoctools qt5-tools boost)
 optdepends=('kdepim-addons: additional plugins')
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('cd3cc977c0dcefc3a43ab04c8713690c34ca5c4c57e5689a654c1d1df7d8c164'
+sha256sums=('19c02adddade1a398fe77e30d56f03a4cb0433598e4212793d603734f4f7571c'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
