--- a/libgssglue/PKGBUILD
+++ b/libgssglue/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libgssglue
 pkgver=0.4
 pkgrel=5
 pkgdesc="Exports a gssapi interface which calls other random gssapi libraries"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.citi.umich.edu/projects/nfsv4/linux/"
 license=('BSD')
 depends=('glibc')
